# phonics

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh
.github/prompts/: bug-followup.prompt.md  create-bug.prompt.md  create-feature.prompt.md
apps/ai_tutor/: admin.py  apps.py  feedback.py  llm_client.py  models.py  services.py  urls.py  validators.py
apps/core/: middleware.py  sanitize.py
apps/games/: admin.py  apps.py  models.py  page_urls.py  page_views.py  serializers.py  story_views.py  urls.py  views.py
apps/phonics/: admin.py  apps.py  models.py  page_urls.py  page_views.py  serializers.py  services.py  urls.py  views.py
apps/sessions/: admin.py  apps.py  models.py  progress.py  serializers.py  services.py  urls.py  views.py
apps/speech/: admin.py  apps.py  azure_client.py  dashboard_views.py  diagnostics_views.py  error_detection.py  logging_config.py  middleware.py  models.py  serializers.py  tts_service.py  urls.py  views.py
config/: urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
docs/: getting_started.md  instruction_breakdown.md  instruction_implement.md
docs/bugs/: 2026_04_16_001-speech-attempt-400-missing-session.md  2026_04_16_002-tts-voice-speed-not-configurable.md  2026_04_16_003-home-page-returns-404.md  2026_04_16_004-games-path-returns-404.md  2026_04_16_005-games-missing-completion-and-visuals.md  2026_04_16_006-previous-feedback-persists-on-rerecord.md  (+4 more)
infra/: README.md  main.bicep  main.bicepparam
scripts/: check_tools.ps1
templates/: base.html
(+159 files in other folders)
