[project]
name = "phonics-app"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_paths = ["."]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
testpaths = ["apps"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["apps", "config"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "DJ",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
